--- a/app/templates/event.html
+++ b/app/templates/event.html
@@ -1,3 +1,5 @@
+<!-- This page will be populated with data from the database using Flask -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +8,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="">
   <link rel="icon" href="favicon.png">
-  <link rel="stylesheet" href="/static/css/home.css">
+  <link rel="stylesheet" href="../static/base_style.css">
 </head>
 <body>
   <h1>{{ event_name }} @ {{ venue_name }}</h1>
