created artistlist and individual artist pages

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="events-container"></div>
 
-    <!-- Include your external JavaScript file -->
+    <!-- Include external JavaScript file -->
     <script src="{{ url_for('static', filename='script/event-list.js') }}"></script>
 </body>
 </html>
