--- a/app/templates/artistlist.html
+++ b/app/templates/artistlist.html
@@ -6,6 +6,9 @@
     <title>Artist List</title>
 </head>
 <body>
-    
+    <div id="artists-container"></div>
+
+    <!-- Include external JavaScript file -->
+    <script src="{{ url_for('static', filename='script/artist-list.js') }}"></script>
 </body>
 </html>
