--- a/app/templates/AddEventForm.html
+++ b/app/templates/AddEventForm.html
@@ -52,7 +52,7 @@
 
         <!-- Container for add event form-->
         <div class="form-container">
-            <form action="{{ url_for('submit_form') }}" method="POST">
+            <form action="{{ url_for('submit_event_form') }}" method="POST">
                 <div class="form-group">
                     <div class="form-category">
                         <label for="event-name">Event Name</label>
