--- a/app/templates/AddArtistForm.html
+++ b/app/templates/AddArtistForm.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HereItIs</title>
     <!-- External CSS files -->
-    <link rel="stylesheet" href="../static/AddFormsStyle.css">
-    <link rel="stylesheet" href="../static/base_style.css">
+    <link rel="stylesheet" href="../static/style/AddFormsStyle.css">
+    <link rel="stylesheet" href="../static/style/base_style.css">
 </head>
 <body>
 <!-- Main container that wraps the entire layout -->
