updated api url and artist routes to use username

--- a/app/templates/artist.html
+++ b/app/templates/artist.html
@@ -9,7 +9,7 @@
     <div id="artist-container"></div>
     <script>
         // Passes from Flask to external JavaScript file
-        const artistID = "{{ artist_id }}";
+        const artistUsername = "{{ artist_username }}";
     </script>
     <script src="{{ url_for('static', filename='script/artist-page.js') }}"></script>
     
