add social media to form and flask handling

--- a/app/templates/AddArtistForm.html
+++ b/app/templates/AddArtistForm.html
@@ -75,6 +75,18 @@
                         <label for="artist-location">Location</label>
                         <input type="text" id="artist-location" name="artist-location" />
                     </div>
+                    <div class="form-category">
+                        <label for="facebook-url">Facebook Link</label>
+                        <input type="text" id="facebook-url" name="facebook-url" />
+                    </div>
+                    <div class="form-category">
+                        <label for="instagram-url">Instagram Link</label>
+                        <input type="text" id="instagram-url" name="instagram-url" />
+                    </div>
+                    <div class="form-category">
+                        <label for="soundcloud-url">Soundcloud Link</label>
+                        <input type="text" id="soundcloud-url" name="soundcloud-url" />
+                    </div>
                     <button type="submit">Submit</button>
                 </div>
             </form>
