started construction of event cards on home page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,10 +14,11 @@
             <nav>
                 <ul>
                     <!-- Need to Link these -->
-                    <li>Home</li>
-                    <li>Artists</li>
-                    <li>Get Listed</li>
-                    <li>About</li>
+                    <a href="/"><li>Home</li></a>
+                    <a href="/artists"><li>Artists</li></a>
+                    <!-- Which Form do we link to artist or event? Or different landing?-->
+                    <a href="/addartistform"><li>Get Listed</li></a>
+                    <a href="/about"><li>About</li></href>
                 </ul>
             </nav>
         </aside>
