--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
                     <a href="/artists"><li>Artists</li></a>
                     <!-- Which Form do we link to artist or event? Or different landing?-->
                     <a href="/addartistform"><li>Get Listed</li></a>
-                    <a href="/about"><li>About</li></href>
+                    <a href="/about"><li>About</li></a>
                 </ul>
             </nav>
         </aside>
