about page HTML/CSS from _hardoced

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -3,9 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>HereItIs - About</title>
+    <link rel="stylesheet" href="../static/base_style.css">
+    <link rel="stylesheet" href="../static/about_page.css">
 </head>
 <body>
-    <h2>About</h2>
+<div class="container">
+    <!-- Left sidebar -->
+    <aside class="sidebar">
+        <!-- Logo in grey box -->
+        <div class="logo-box">
+            <h1>HereItIs</h1>
+        </div>
+
+        <!-- Navigation in black box -->
+        <div class="nav-box">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#artists">Artists</a></li>
+                <li><a href="#get-listed">Get Listed</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+        </div>
+
+        <!-- Built By section -->
+        <div class="built-by">
+            <h2>Built By:</h2>
+            <div class="names">
+                Leonora Goble<br><br>
+                Matthew Presti<br><br>
+                William Booth<br><br>
+                Alexander<br>
+                Gonzalez-Torres<br><br>
+                Mohammed<br>
+                Alsallami
+            </div>
+        </div>
+    </aside>
+
+    <!-- Main content area -->
+    <main>
+        <header class="header-bar">
+            <div class="header-content">
+                About
+            </div>
+        </header>
+
+        <div class="main-content">
+            <div class="page-description">
+                <h2>Page Description</h2>
+                <p>A simple about page, with a description of what the app is and how to use it.</p>
+            </div>
+        </div>
+    </main>
+</div>
 </body>
 </html>
