--- a/app/templates/event.html
+++ b/app/templates/event.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event: {{ event_id }}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/base_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/event_style.css') }}">
 </head>
 <body>
-    <div id="event-container"></div>
+    <div class="container">
+        <aside>
+            <h1>HereItIs</h1>
+            <nav>
+                <ul>
+                    <!-- Need to Link these -->
+                    <a href="/"><li>Home</li></a>
+                    <a href="/artists"><li>Artists</li></a>
+                    <!-- Which Form do we link to artist or event? Or different landing?-->
+                    <a href="/addartistform"><li>Get Listed</li></a>
+                    <a href="/about"><li>About</li></a>
+                </ul>
+            </nav>
+        </aside>
+        <div id="event-container"></div>
+    </div>
     <script>
         const eventID = "{{ event_id }}";
     </script>
