add style to pages, fix poster aspect ratio, correct page links

--- a/app/templates/artist.html
+++ b/app/templates/artist.html
@@ -13,7 +13,7 @@
         <h1>HereItIs</h1>
         <nav>
             <ul>
-                <li><a href="/home">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/artists">Artists</a></li>
                 <li><a href="/get-listed">Get Listed</a></li>
                 <li><a href="/about">About</a></li>
