--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HereItIs - About</title>
-    <link rel="stylesheet" href="../static/base_style.css">
-    <link rel="stylesheet" href="../static/about_page.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/base_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/about_page.css') }}">
 </head>
 <body>
 <div class="container">
@@ -19,10 +19,10 @@
         <!-- Navigation in black box -->
         <div class="nav-box">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#artists">Artists</a></li>
-                <li><a href="#get-listed">Get Listed</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/artists">Artists</a></li>
+                <li><a href="/addartistform">Get Listed</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
         </div>
 
