--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -52,7 +52,7 @@
         <div class="main-content">
             <div class="page-description">
                 <h2>Page Description</h2>
-                <p>A simple about page, with a description of what the app is and how to use it.</p>
+                <p>HereItIs is the goto place online to connect with your local music scene offline. We are a centralized location for music event announcement, management, and engagement, bringing together fans, artists, event planners, and more.</p>
             </div>
         </div>
     </main>
