--- a/app/static/style/artist_style.css
+++ b/app/static/style/artist_style.css
@@ -25,6 +25,7 @@
     justify-content: center;
     align-items: center;
     color: #000;
+    background-position: center;
 }
 
 /* Media player */
