--- a/app/static/style/event_style.css
+++ b/app/static/style/event_style.css
@@ -1,16 +1,16 @@
 /* This is where we will style the event page */
 
-.event-container
+#event-container
 {
-    aspect-ratio: 16/9;  /* Maintains consistent card proportions */
+    aspect-ratio: 16 / 9;  /* Maintains consistent card proportions */
     border: 1px solid #999;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .event-card-left
 {
-    display: flexbox;
+    display: flex;
     flex-direction: column;
     flex: 1;
     padding: 10px;
@@ -19,7 +19,7 @@
 
 .event-card-right
 {
-    display: flexbox;
+    display: flex;
     flex-direction: column;
     flex: 1;
     padding: 10px;
@@ -28,9 +28,18 @@
 
 .event-card-bottom
 {
+    /* puts card on its own line  */
+    align-self: normal;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 10px;
     color:blue;
+}
+
+.event-poster-container
+{
+    width: 300px;
+    height: 200px;
 }
