--- a/app/templates/AddEventForm.html
+++ b/app/templates/AddEventForm.html
@@ -21,11 +21,11 @@
         <nav>
             <ul>
                 <!-- Navigation links - currently using hashtags as placeholders -->
-                <li><a href="#home">HOME</a></li>
-                <li><a href="#artists">ARTIST</a></li>
+                <li><a href="/">HOME</a></li>
+                <li><a href="/artists">ARTIST</a></li>
                 <!-- this needs to be differentiated to show it is selected -->
-                <li><a href="#get-listed">GET LISTED</a></li>
-                <li><a href="#about">ABOUT</a></li>
+                <li><a href="/addartistform">GET LISTED</a></li>
+                <li><a href="/about">ABOUT</a></li>
             </ul>
         </nav>
 
