--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS Files -->
-     <link rel="stylesheet" type="text/css" href="../static/style/base_style.css"
+     <link rel="stylesheet" type="text/css" href="../static/style/base_style.css">
     <title>HereItIs</title>
 </head>
 <body>
