--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,6 +21,9 @@
                     <a href="/about"><li>About</li></a>
                 </ul>
             </nav>
+            <div class="filter-box-container">
+                <button id="filter-button">Filter</button>
+            </div>
         </aside>
         <div id="events-grid"></div>
     </div>
