Standardize menu options style

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -19,10 +19,10 @@
         <!-- Navigation in black box -->
         <div class="nav-box">
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/artists">Artists</a></li>
-                <li><a href="/addartistform">Get Listed</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="/">HOME</a></li>
+                <li><a href="/artists">ARTISTS</a></li>
+                <li><a href="/addartistform">GET LISTED</a></li>
+                <li><a href="/about">ABOUT</a></li>
             </ul>
         </div>
 
