--- a/app/templates/artistlist.html
+++ b/app/templates/artistlist.html
@@ -6,6 +6,7 @@
     <title>Artist List</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style/base_style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style/artist_style.css') }}">
+    <title>Artist List</title>
 </head>
 <body>
 <div class="container">
@@ -14,10 +15,10 @@
         <h1>HereItIs</h1>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/artists">Artists</a></li>
-                <li><a href="/addartistform">Get Listed</a></li>
-                <li><a href="/about">About</a></li>
+                <li><a href="/">HOME</a></li>
+                <li><a href="/artists">ARTISTS</a></li>
+                <li><a href="/addartistform">GET LISTED</a></li>
+                <li><a href="/about">ABOUT</a></li>
             </ul>
         </nav>
     </aside>
