--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,11 +14,11 @@
             <nav>
                 <ul>
                     <!-- Need to Link these -->
-                    <a href="/"><li>Home</li></a>
-                    <a href="/artists"><li>Artists</li></a>
+                    <li><a href="/">HOME</a></li>
+                    <li><a href="/artists">ARTISTS</a></li>
                     <!-- Which Form do we link to artist or event? Or different landing?-->
-                    <a href="/addartistform"><li>Get Listed</li></a>
-                    <a href="/about"><li>About</li></a>
+                    <li><a href="/addartistform">GET LISTED</a></li>
+                    <li><a href="/about">ABOUT</a></li>
                 </ul>
             </nav>
         </aside>
