--- a/app/templates/AddEventForm.html
+++ b/app/templates/AddEventForm.html
@@ -22,7 +22,7 @@
             <ul>
                 <!-- Navigation links - currently using hashtags as placeholders -->
                 <li><a href="/">HOME</a></li>
-                <li><a href="/artists">ARTIST</a></li>
+                <li><a href="/artists">ARTISTS</a></li>
                 <!-- this needs to be differentiated to show it is selected -->
                 <li><a href="/addartistform">GET LISTED</a></li>
                 <li><a href="/about">ABOUT</a></li>
