--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -17,14 +17,14 @@
         </div>
 
         <!-- Navigation in black box -->
-        <div class="nav-box">
+        <nav>
             <ul>
                 <li><a href="/">HOME</a></li>
                 <li><a href="/artists">ARTISTS</a></li>
                 <li><a href="/addartistform">GET LISTED</a></li>
                 <li><a href="/about">ABOUT</a></li>
             </ul>
-        </div>
+        </nav>
 
         <!-- Built By section -->
         <div class="built-by">
