--- a/app/templates/artistlist.html
+++ b/app/templates/artistlist.html
@@ -12,7 +12,9 @@
 <div class="container">
     <!-- Sidebar -->
     <aside>
-        <h1>HereItIs</h1>
+        <div class="logo-box">
+            <h1>HereItIs</h1>
+        </div>
         <nav>
             <ul>
                 <li><a href="/">HOME</a></li>
