--- a/app/templates/AddEventForm.html
+++ b/app/templates/AddEventForm.html
@@ -15,7 +15,9 @@
     <!-- Left sidebar containing navigation and featured artist -->
     <aside>
         <!-- Website logo/title -->
-        <h1>HereItIs</h1>
+        <div class="logo-box">
+            <h1>HereItIs</h1>
+        </div>
 
         <!-- Main navigation menu -->
         <nav>
