--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="container">
         <aside>
-            <h1>HereItIs</h1>
+            <div class="logo-box">
+                <h1>HereItIs</h1>
+            </div>
             <nav>
                 <ul>
                     <!-- Need to Link these -->
